--- a/styles/app.css
+++ b/styles/app.css
@@ -1,5 +1,7 @@
 /* General */
-* { box-sizing: border-box; }
+* {
+  box-sizing: border-box;
+}
 
 :root {
   --purple-light-1: #FBFAFB;
@@ -39,12 +41,15 @@ body {
   padding: 0;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   margin: 0;
   padding: 0;
 }
 
-h1, h2 {
+h1,
+h2 {
   font-size: 24px;
   color: var(--purple-dark-2);
   font-family: var(--font-family-titles);
@@ -89,32 +94,102 @@ button {
 
 
 /* Shared */
-.header-container, .trendingPreview-header, .categoriesPreview-container {
+.header-container,
+.trendingPreview-header,
+.categoriesPreview-container,
+.liked-header {
   padding: 0 24px;
 }
 
-.trendingPreview-container, .categoriesPreview-container, footer {
+.trendingPreview-container,
+.categoriesPreview-container,
+footer,
+.liked-container {
   margin-top: 48px;
 }
 
-.trendingPreview-header, .categoriesPreview-title {
+.trendingPreview-header,
+.categoriesPreview-title,
+.liked-header {
   margin-bottom: 24px;
 }
 
 .movie-container {
   cursor: pointer;
+  position: relative;
+}
+
+.movie-container--loading {
+  background: var(--purple-light-2);
+  border-radius: 8px;
+  height: 225px;
+  min-height: 225px;
+  max-height: 225px;
+  width: 150px;
+  max-width: 150px;
+  margin-bottom: 15px;
+  animation: loading-skeleton infinite 1.5s;
+}
+
+.movie-container--loading:nth-child(2) {
+  animation-delay: .2s;
+}
+
+.movie-container--loading:nth-child(3) {
+  animation-delay: .4s;
 }
 
 .movie-img {
   border-radius: 8px;
 }
 
-.categoriesPreview-list, .categories-list {
+.movie-btn {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  height: 30px;
+  width: 30px;
+  border-radius: 30px;
+  margin: 0;
+  padding: 0;
+}
+
+.movie-btn::before {
+  content: '🤍';
+}
+
+.movie-btn--liked {
+  background-color: var(--purple-light-2);
+}
+
+.movie-btn--liked::before {
+  content: '💜';
+}
+
+.categoriesPreview-list,
+.categories-list {
   display: flex;
   align-items: center;
   justify-content: space-between;
   position: relative;
   flex-wrap: wrap;
+}
+
+.category-container--loading {
+  background: var(--purple-light-2);
+  border-radius: 8px;
+  height: 25px;
+  min-height: 25px;
+  max-height: 25px;
+  width: 150px;
+  min-width: 150px;
+  max-width: 150px;
+  margin-bottom: 15px;
+  animation: loading-skeleton infinite 1.5s;
+}
+
+.category-container--loading:nth-child(2) {
+  animation-delay: .2s;
 }
 
 
@@ -135,7 +210,7 @@ button {
 
 .header-container--categoryView {
   background: linear-gradient(180deg, rgba(238, 204, 117, 0.5) 0%, rgba(238, 204, 117, 0) 72.92%);
-} 
+}
 
 .header-title {
   margin-bottom: 16px;
@@ -148,6 +223,7 @@ button {
   cursor: pointer;
   display: inline-block;
 }
+
 .header-arrow--white {
   color: var(--purple-light-1);
 }
@@ -166,6 +242,7 @@ button {
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
 }
+
 .header-searchForm button {
   width: 56px;
   height: 48px;
@@ -175,7 +252,8 @@ button {
 
 
 /* Trending */
-.trendingPreview-header {
+.trendingPreview-header,
+.liked-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -187,7 +265,8 @@ button {
   width: 72px;
 }
 
-.trendingPreview-movieList {
+.trendingPreview-movieList,
+.liked-movieList {
   overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
@@ -196,12 +275,14 @@ button {
   padding-bottom: 16px;
 }
 
-.trendingPreview-movieList .movie-container {
+.trendingPreview-movieList .movie-container,
+.liked-movieList .movie-container {
   display: inline-block;
   margin-right: 8px;
 }
 
-.trendingPreview-movieList .movie-container .movie-img {
+.trendingPreview-movieList .movie-container .movie-img,
+.liked-movieList .movie-container .movie-img {
   height: 225px;
   min-height: 225px;
   max-height: 225px;
@@ -234,25 +315,82 @@ button {
   width: 8px;
   height: 8px;
 }
-#id28 { --idColor: var(--yellow); }
-#id12 { --idColor: var(--red); }
-#id16 { --idColor: var(--green); }
-#id35 { --idColor: var(--lightBlue); }
-#id80 { --idColor: var(--darkBlue); }
-#id99 { --idColor: var(--purple-dark-1); }
-#id18 { --idColor: var(--purple-medium-1); }
-#id10751 { --idColor: var(--yellow); }
-#id14 { --idColor: var(--red); }
-#id36 { --idColor: var(--green); }
-#id27 { --idColor: var(--lightBlue); }
-#id10402 { --idColor: var(--darkBlue); }
-#id9648 { --idColor: var(--purple-dark-1); }
-#id10749 { --idColor: var(--purple-medium-1); }
-#id878 { --idColor: var(--yellow); }
-#id10770 { --idColor: var(--red); }
-#id53 { --idColor: var(--green); }
-#id10752 { --idColor: var(--lightBlue); }
-#id37 { --idColor: var(--darkBlue); }
+
+#id28 {
+  --idColor: var(--yellow);
+}
+
+#id12 {
+  --idColor: var(--red);
+}
+
+#id16 {
+  --idColor: var(--green);
+}
+
+#id35 {
+  --idColor: var(--lightBlue);
+}
+
+#id80 {
+  --idColor: var(--darkBlue);
+}
+
+#id99 {
+  --idColor: var(--purple-dark-1);
+}
+
+#id18 {
+  --idColor: var(--purple-medium-1);
+}
+
+#id10751 {
+  --idColor: var(--yellow);
+}
+
+#id14 {
+  --idColor: var(--red);
+}
+
+#id36 {
+  --idColor: var(--green);
+}
+
+#id27 {
+  --idColor: var(--lightBlue);
+}
+
+#id10402 {
+  --idColor: var(--darkBlue);
+}
+
+#id9648 {
+  --idColor: var(--purple-dark-1);
+}
+
+#id10749 {
+  --idColor: var(--purple-medium-1);
+}
+
+#id878 {
+  --idColor: var(--yellow);
+}
+
+#id10770 {
+  --idColor: var(--red);
+}
+
+#id53 {
+  --idColor: var(--green);
+}
+
+#id10752 {
+  --idColor: var(--lightBlue);
+}
+
+#id37 {
+  --idColor: var(--darkBlue);
+}
 
 
 /* Generic List (search, trending & category) */
@@ -271,6 +409,10 @@ button {
 
 .genericList-container .movie-img {
   width: 100%;
+  min-width: 170px;
+  max-width: 170px;
+  min-height: 255px;
+  max-height: 255px;
 }
 
 
@@ -298,6 +440,7 @@ button {
   width: 18%;
   font-weight: var(--font-weight-title2);
 }
+
 .movieDetail-score::before {
   content: '★';
   color: var(--yellow);
@@ -339,7 +482,7 @@ button {
   min-height: 187.5px;
   max-height: 187.5px;
 }
-  
+
 
 /* Footer */
 footer {
@@ -356,4 +499,18 @@ footer {
 /* Navigation */
 .inactive {
   display: none;
+}
+
+/* Animations */
+
+@keyframes loading-skeleton {
+
+  0%,
+  100% {
+    opacity: 100%;
+  }
+
+  50% {
+    opacity: 0%;
+  }
 }
